# ChangeLog for x11-libs/gksu
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gksu/ChangeLog,v 1.40 2007/05/27 04:07:11 kumba Exp $

  27 May 2007; Joshua Kinard <kumba@gentoo.org> gksu-2.0.0.ebuild:
  Stable on mips.

  03 May 2007; Daniel Gryniewicz <dang@gentoo.org> gksu-2.0.0.ebuild:
  Install docs; bug #176871

  06 Feb 2007; Roy Marples <uberlord@gentoo.org> gksu-2.0.0.ebuild:
  Added ~x86-fbsd keyword.

  30 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> gksu-2.0.0.ebuild:
  Stable on Alpha + IA64.

  21 Dec 2006; Markus Rothe <corsair@gentoo.org> gksu-2.0.0.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> gksu-2.0.0.ebuild:
  Stable on sparc

  17 Dec 2006; René Nussbaumer <killerfox@gentoo.org> gksu-2.0.0.ebuild:
  Stable on hppa. See bug #156662.

  17 Dec 2006; René Nussbaumer <killerfox@gentoo.org> gksu-2.0.0.ebuild:
  Stable on hppa. See bug #156662.

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> gksu-2.0.0.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> gksu-2.0.0.ebuild:
  Stable on amd64 wrt bug #156662.

  10 Dec 2006; Andrej Kacian <ticho@gentoo.org> gksu-2.0.0.ebuild:
  Stable on x86, bug #156662.

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> gksu-2.0.0.ebuild:
  Add ~alpha keyword.

  15 Nov 2006; Markus Rothe <corsair@gentoo.org> gksu-2.0.0.ebuild:
  Added ~ppc64; bug #154290

  04 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> -gksu-1.0.5.ebuild:
  1.9.1 is stable now; remove 1.0.5

  03 Oct 2006; Aron Griffis <agriffis@gentoo.org> gksu-2.0.0.ebuild:
  Mark 2.0.0 ~ia64

  03 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> gksu-1.9.1.ebuild:
  Stable on x86 wrt bug #149444.

  01 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org> gksu-2.0.0.ebuild:
  Added ~hppa, bug #147484

  30 Sep 2006; <nixnut@gentoo.org> gksu-1.9.1.ebuild:
  Stable on ppc wrt bug 149444
