@@ -1,17 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gksu-1.9.1.tar.gz 422819 RMD160 f1f4a0de14c1e55cb8d6310b88be6b7411396dca SHA1 598de48f4674a2ae3d8349a815a832e9f7160837 SHA256 5b3300a8591558500def398471620b0788b345b39ac42bcf3dad823fea3e273d
 DIST gksu-2.0.0.tar.gz 440748 RMD160 5045d7c4ca56e8ca2fb7049c7e86c382cda67df2 SHA1 f15d568f43ecbeedd050b8f09b1da94a7d574de5 SHA256 8148faf12bb2bbd321b08c1207e7aa5ae93d5cc8b8809e2de6ce5af1e1c5b85b
 EBUILD gksu-1.9.1.ebuild 1156 RMD160 e744ee2e0e451f918733344c66e37c2b6e379f0b SHA1 aa92824ee201512a99307bb8829073f4510bd684 SHA256 1a35c77e905934c8f6bd49d21cc4973ffdc6657aff8716cc63ec6c879152df83
 MD5 928d9f2cbf76a14f812274cce3d65131 gksu-1.9.1.ebuild 1156
 RMD160 e744ee2e0e451f918733344c66e37c2b6e379f0b gksu-1.9.1.ebuild 1156
 SHA256 1a35c77e905934c8f6bd49d21cc4973ffdc6657aff8716cc63ec6c879152df83 gksu-1.9.1.ebuild 1156
-EBUILD gksu-2.0.0.ebuild 1080 RMD160 6f639389bde93a1a11322d889be3e252707ea450 SHA1 07328d6c3a96d9e8e7192f0cd3e4d216f7f3ab8a SHA256 62d7f1a4dd3803555ec4e6e8651fd1047c8f502b0fcbc9680a237c9442d8da39
-MD5 1e9af75ee63157c0a533b774dd65bf85 gksu-2.0.0.ebuild 1080
-RMD160 6f639389bde93a1a11322d889be3e252707ea450 gksu-2.0.0.ebuild 1080
-SHA256 62d7f1a4dd3803555ec4e6e8651fd1047c8f502b0fcbc9680a237c9442d8da39 gksu-2.0.0.ebuild 1080
-MISC ChangeLog 5118 RMD160 6372c2b46096c1afb1fed4d084956b108c3bfd43 SHA1 cd6f7283a815cd6f0b71a7db3c46b225f2d7e4e8 SHA256 4b3903d5f5c5cd0bb99004bc956c9237e4264e5777e4a58b080dc2c2e08407ba
-MD5 9063339fe1276bb51ddb1eda278c10b0 ChangeLog 5118
-RMD160 6372c2b46096c1afb1fed4d084956b108c3bfd43 ChangeLog 5118
-SHA256 4b3903d5f5c5cd0bb99004bc956c9237e4264e5777e4a58b080dc2c2e08407ba ChangeLog 5118
+EBUILD gksu-2.0.0.ebuild 1609 RMD160 cb9dd785b60395db38a225de0dee1d2c529b4441 SHA1 6b2ed9dea9486d6e9c33d453159954c7e58e0530 SHA256 f1d0f11f589b4158c7c4e82bc4d3871bb9d7bdcee52a466cde9a913ec21cafed
+MD5 74f600ce1aff5b0fec388dde2536fd6d gksu-2.0.0.ebuild 1609
+RMD160 cb9dd785b60395db38a225de0dee1d2c529b4441 gksu-2.0.0.ebuild 1609
+SHA256 f1d0f11f589b4158c7c4e82bc4d3871bb9d7bdcee52a466cde9a913ec21cafed gksu-2.0.0.ebuild 1609
+MISC ChangeLog 5227 RMD160 c898af5cb7f6febd35bdfb06f289c8c66ad82981 SHA1 0e7299fccbed215342fd434cb16c4ff1b78b6493 SHA256 4d4574ec7c7a84be4ea2b39c9aec10bfa09a8650ed2422c703130f5e9d8d069b
+MD5 8a1aae692b14d75ce43bb1dbb86d53f7 ChangeLog 5227
+RMD160 c898af5cb7f6febd35bdfb06f289c8c66ad82981 ChangeLog 5227
+SHA256 4d4574ec7c7a84be4ea2b39c9aec10bfa09a8650ed2422c703130f5e9d8d069b ChangeLog 5227
 MISC metadata.xml 253 RMD160 e1dda0cee52f7759dd137d288dacc865dd211027 SHA1 f04021419226bd57c9c960fbcf798d9c249d22d8 SHA256 39d57d5a8be47e8247d2b8659b092c4421f2eef9cc83e541755a9eb34dcb667c
 MD5 84dfd5faac833ac5fd9cb0d47065c930 metadata.xml 253
 RMD160 e1dda0cee52f7759dd137d288dacc865dd211027 metadata.xml 253
@@ -22,3 +25,10 @@ SHA256 21915125b3516cd054dbe321332c6ec3cdf4746081050684b557e7280331af47 files/di
 MD5 4444b39f44e21e311cd1393929df172b files/digest-gksu-2.0.0 232
 RMD160 64bcf08000277725faa0668d989ce3fe0a4c6244 files/digest-gksu-2.0.0 232
 SHA256 bb6f40d50da5359d4fa6de997a2bb8a4f69b6e4c26c19f8d5168a2b667b9e800 files/digest-gksu-2.0.0 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGeE6momPajV0RnrERAgXFAJ9470Z9Ip8PVODhIfrkXlHJ2qLIwACggHmI
+LmR7s69Muh6LmI0Wza4fOFQ=
+=T5b1
+-----END PGP SIGNATURE-----
